--- a/drivers/video/fbdev/omap2/omapfb/displays/Kconfig
+++ b/drivers/video/fbdev/omap2/omapfb/displays/Kconfig
@@ -90,4 +90,11 @@ config FB_OMAP2_PANEL_NEC_NL8048HL11
 	  This NEC NL8048HL11 panel is TFT LCD used in the
 	  Zoom2/3/3630 sdp boards.
 
+config FB_OMAP2_PANEL_N8X0
+	tristate "N8X0 Panel"
+	depends on FB_OMAP2_DSS_RFBI && SPI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  This is the LCD panel used on Nokia N8x0
+
 endmenu
