--- a/arch/arm/boot/dts/omap2420-n810.dts
+++ b/arch/arm/boot/dts/omap2420-n810.dts
@@ -3,6 +3,7 @@
 
 #include "omap2420-n8x0-common.dtsi"
 #include <dt-bindings/input/input.h>
+#include <dt-bindings/leds/common.h>
 
 / {
 	model = "Nokia N810";
@@ -183,18 +184,26 @@
 		label = "rgb";
 		enable-gpio = <&gpio1 24 GPIO_ACTIVE_HIGH>;
 		interrupts = <&gpio1 27 IRQ_TYPE_EDGE_RISING>;
-		chan0 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		chan@0 {
+			reg = <0>;
+			color = <LED_COLOR_ID_RED>;
 			chan-name = "red";
 			led-cur = /bits/ 8 <0x2f>;
 			max-cur = /bits/ 8 <0x5f>;
 			linux,default-trigger = "panic";
 		};
-		chan1 {
+		chan@1 {
+			reg = <1>;
+			color = <LED_COLOR_ID_GREEN>;
 			chan-name = "green";
 			led-cur = /bits/ 8 <0x2f>;
 			max-cur = /bits/ 8 <0x5f>;
 		};
-		chan2 {
+		chan@2 {
+			reg = <2>;
+			color = <LED_COLOR_ID_BLUE>;
 			chan-name = "blue";
 			led-cur = /bits/ 8 <0x2f>;
 			max-cur = /bits/ 8 <0x5f>;
