--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -871,6 +871,18 @@ config LEDS_ACER_A500
 	  This option enables support for the Power Button LED of
 	  Acer Iconia Tab A500.
 
+config LEDS_TAHVO
+	tristate "Tahvo PWM led support"
+	depends on LEDS_CLASS && MFD_RETU
+	help
+	  Tahvo PWM LED driver for Nokia Internet Tablets (770, N800,
+	  N810). At least on N810 the LCD backlight is controlled by
+	  Tahvo/Betty MFD.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called leds-tahvo.
+
+
 source "drivers/leds/blink/Kconfig"
 
 comment "Flash and Torch LED drivers"
