n810: adjust defconfig for new tahvo backlight

--- a/arch/arm/configs/omap2plus_n810_defconfig
+++ b/arch/arm/configs/omap2plus_n810_defconfig
@@ -2343,7 +2343,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_OMAP2_VRFB=y
 CONFIG_FB_OMAP2=y
-CONFIG_FB_OMAP2_DEBUG_SUPPORT=y
+# CONFIG_FB_OMAP2_DEBUG_SUPPORT is not set
 CONFIG_FB_OMAP2_NUM_FBS=3
 CONFIG_FB_OMAP2_DSS_INIT=y
 CONFIG_FB_OMAP2_DSS=y
@@ -2408,7 +2408,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_LV5207LP is not set
 # CONFIG_BACKLIGHT_BD6107 is not set
 # CONFIG_BACKLIGHT_ARCXCNN is not set
-# CONFIG_BACKLIGHT_LED is not set
+CONFIG_BACKLIGHT_LED=y
 # end of Backlight & LCD device support
 
 CONFIG_VIDEOMODE_HELPERS=y
@@ -3033,9 +3033,8 @@ CONFIG_NOP_USB_XCEIV=m
 # end of USB Physical Layer drivers
 
 CONFIG_USB_GADGET=m
-CONFIG_USB_GADGET_DEBUG=y
-# CONFIG_USB_GADGET_VERBOSE is not set
-CONFIG_USB_GADGET_DEBUG_FILES=y
+# CONFIG_USB_GADGET_DEBUG is not set
+# CONFIG_USB_GADGET_DEBUG_FILES is not set
 CONFIG_USB_GADGET_VBUS_DRAW=2
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 # CONFIG_U_SERIAL_CONSOLE is not set
@@ -3333,7 +3332,7 @@ CONFIG_RTC_I2C_AND_SPI=y
 #
 # on-CPU RTC drivers
 #
-# CONFIG_RTC_DRV_OMAP is not set
+CONFIG_RTC_DRV_OMAP=y
 # CONFIG_RTC_DRV_CADENCE is not set
 # CONFIG_RTC_DRV_FTRTC010 is not set
 # CONFIG_RTC_DRV_R7301 is not set
