n810: dt-binding and register cleanup for retu-rtc

--- a/arch/arm/boot/dts/omap2420-n810.dts
+++ b/arch/arm/boot/dts/omap2420-n810.dts
@@ -32,6 +32,12 @@
 	};
 };
 
+&retu {
+	retu_rtc: retu_rtc {
+		compatible = "nokia,retu,rtc";
+	};
+};
+
 &tahvo {
 	tahvo_ledpwm: tahvo_ledpwm {
 		compatible = "nokia,tahvo,ledpwm";
