--- a/arch/arm/configs/omap2plus_n810_defconfig
+++ b/arch/arm/configs/omap2plus_n810_defconfig
@@ -3231,10 +3231,8 @@ CONFIG_EDAC_ATOMIC_SCRUB=y
 CONFIG_EDAC_SUPPORT=y
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
-CONFIG_RTC_HCTOSYS=y
-CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
-CONFIG_RTC_SYSTOHC=y
-CONFIG_RTC_SYSTOHC_DEVICE="rtc0"
+# CONFIG_RTC_HCTOSYS is not set
+# CONFIG_RTC_SYSTOHC is not set
 # CONFIG_RTC_DEBUG is not set
 # CONFIG_RTC_NVMEM is not set
 
@@ -3270,7 +3268,8 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_DRV_PCF8583 is not set
 # CONFIG_RTC_DRV_M41T80 is not set
 # CONFIG_RTC_DRV_BQ32K is not set
-CONFIG_RTC_DRV_TWL92330=y
+# CONFIG_RTC_DRV_TWL92330 is not set
+CONFIG_RTC_DRV_RETU=y
 # CONFIG_RTC_DRV_S35390A is not set
 # CONFIG_RTC_DRV_FM3130 is not set
 # CONFIG_RTC_DRV_RX8010 is not set
@@ -3332,7 +3331,7 @@ CONFIG_RTC_I2C_AND_SPI=y
 #
 # on-CPU RTC drivers
 #
-CONFIG_RTC_DRV_OMAP=y
+# CONFIG_RTC_DRV_OMAP is not set
 # CONFIG_RTC_DRV_CADENCE is not set
 # CONFIG_RTC_DRV_FTRTC010 is not set
 # CONFIG_RTC_DRV_R7301 is not set
