--- a/arch/arm/boot/dts/omap2420-n810.dts
+++ b/arch/arm/boot/dts/omap2420-n810.dts
@@ -27,8 +27,24 @@
 		compatible = "led-backlight";
 
 		leds = <&tahvo_ledpwm>;
-		brightness-levels = <0 8 16 24 32 40 48 56 64 72 80 88 96 104 112 120 127>;
-		default-brightness-level = <16>;
+		brightness-levels = <
+			  0   1   2   3   4   5   6   7
+			  8   9  10  11  12  13  14  15
+			 16  17  18  19  20  21  22  23
+			 24  25  26  27  28  29  30  31
+			 32  33  34  35  36  37  38  39
+			 40  41  42  43  44  45  46  47
+			 48  49  50  51  52  53  54  55
+			 56  57  58  59  60  61  62  63
+			 64  65  66  67  68  69  70  71
+			 72  73  74  75  76  77  78  79
+			 80  81  82  83  84  85  86  87
+			 88  89  90  91  92  93  94  95
+			 96  97  98  99 100 101 102 103
+			104 105 106 107 108 109 110 111
+			112 113 114 115 116 117 118 119
+			120 121 122 123 124 125 126 127>;
+		default-brightness-level = <100>;
 	};
 };
 
@@ -246,7 +262,6 @@
 
 &dss {
 	status = "okay";
-	ti,no-reset-on-init;
 };
 
 &dispc {
@@ -255,7 +270,6 @@
 
 &rfbi {
 	status = "okay";
-	ti,no-reset-on-init;
 	pinctrl-names = "default";
 	pinctrl-0 = <&dss_rfbi_pins>;
 
@@ -308,6 +322,8 @@
 		label = "lcd";
 		reset-gpios = <&gpio1 30 GPIO_ACTIVE_HIGH>; /* 30 */
 		powerdown-gpio = <&gpio1 15 GPIO_ACTIVE_HIGH>; /* 15 */
+
+		backlight = <&backlight>;
 
 		port {
 			lcd_in: endpoint {
