--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -1413,6 +1413,14 @@ config REGULATOR_WM8994
 	  This driver provides support for the voltage regulators on the
 	  WM8994 CODEC.
 
+config REGULATOR_TAHVO_VCORE
+	tristate "Tahvo/Betty Vcore regulator support"
+	depends on MFD_RETU
+	help
+	  This driver supports Vcore voltage control on Nokia's Tahvo/Betty
+	  ASIC chip. The regulator controls framebuffer supply voltage in
+	  Nokia internet tablets (for sure at least N810).
+
 config REGULATOR_QCOM_LABIBB
 	tristate "QCOM LAB/IBB regulator support"
 	depends on SPMI || COMPILE_TEST
