--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -470,6 +470,13 @@ config HISI_HIKEY_USB
 	  switching between the dual-role USB-C port and the USB-A host ports
 	  using only one USB controller.
 
+config RETU_REGS
+	tristate "Retu and Tahvo register access in sysfs"
+	depends on MFD_RETU
+	help
+	  Simple helper providing direct register access for Retu and Tahvo
+	  chips over sysfs.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
